# libosmo-dsp

./: .gitignore  Doxyfile.in  Makefile.am  README.md  configure.ac  git-version-gen  libosmodsp.pc.in  libosmosdr.pc.in
contrib/: libosmo-dsp.spec.in  libosmodsp.spec.in
debian/: changelog  control  copyright  libosmodsp-doc.doc-base  libosmodsp-doc.install  libosmodsp0.install  rules
include/osmocom/: Makefile.am
include/osmocom/dsp/: Makefile.am  cfile.h  cxvec.h  cxvec_math.h  iqbal.h  version.h.tpl
include/osmocom/sdr/: Makefile.am  cfile.h  cxvec.h  cxvec_math.h
src/: Makefile.am  cfile.c  cxvec.c  cxvec_math.c  iqbal.c
